# GOIT-AlGO-HW-3

./: 0001_initial.py  03.02.py  03_01.py  03_02.py  Dockerfile  add_author.html  consumer.py  database.py  forms.py  models.py  models_rabbit.py  producer.py  pyproject.toml  settings.py  task2.py  urls.py  views.py  web_hw_5.py  web_module_9.py  Диаграмма без названия.drawio
GOIT-ALGO-HW-05/: Task 1.py  Task 2.py  Task 3.py
GOIT-ALGO-HW-05/GOIT-ALGO-HW-06/: Task 1.py
GOIT-ALGO-HW-05/GOIT-ALGO-HW-07/: 08.py  GOIT-PYCORE-HW-08.py  HW-07.py  Task 1.py  Task1..py  WEB_Module_1.py  addressbook.pkl  import csv.py  Диаграмма без названия.drawio
GOIT-ALGO-HW-08/: hw-08.PY
Module 3/: Module 3 hw2
Module 3. hw/: Module 3 hw1.py  Module 3 hw2
Module 3. hw 1-2/: Module 3 hw2
Module 4/: task1.py  task4.py
alembic/: alembic.ini  connect_db.py  main_07.py  models.py  my_select_1.py  my_select_10.py  my_select_2.py  my_select_3.py  my_select_4.py  my_select_5.py  my_select_6.py  my_select_7.py  my_select_8.py  my_select_9.py  mynotes.dbS
alembic/alembic/: seed.py
alembic/alembic/versions/: ea19ccc9737d_init.py
docker-file/: Dockerfile  pyproject.toml
module2_docker/: Dockerfile  pyproject.toml
web_module_03/: 03_01.py
web_module_04/: index.html  main.py  message.html
web_module_06/: connect.py  main.py  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
web_module_4/: main.py
webb_module_03/: 03_01.py
