[tool.poetry]
name = "my-project-assistant-bot"
version = "1.8.3"
description = "My awesome project!"
authors = ["AlinaRybchuk <alina_rybchuk_96@ukr.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
blinker = "1.8.2"
click = "8.1.7"
colorama = "0.4.6"
Flask = "3.0.3"
importlib_metadata = "8.4.0"
itsdangerous = "2.2.0"
Jinja2 = "3.1.4"
MarkupSafe = "2.1.5"
Werkzeug = "3.0.4"
zipp = "3.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
